Bug 187891 - Clearing location bar line edit, yields to not being able to refresh that page (or any page it seems)
Summary: Clearing location bar line edit, yields to not being able to refresh that pag...
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-23 01:17 UTC by Shaun Reich
Modified: 2011-06-19 20:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Shaun Reich 2009-03-23 01:17:27 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

Open up a tab, go to some URL, clear the location bar after it finished loading...now click reload. Error message....

This is somewhat similar to my other bug actually... which is similar to another (unreported bug).

I need help to sort this problem out... it seems that when you change the line edit, then switch tabs, it doesn't load the text from the now focused tab, so in honesty... it screws up all of the locations for your tabs, so you:

a.) can't reload -any- of them
b.) can't easily change the url of a current tab (say you want to manually change it... from say, websvn.org/trunk to websvn.org/trunk/KDE/kdebase/apps

Etcetera.

This is the other bug, I think they are related (now that I report this one) and that the underlying cause is that the line edit is not loaded when switching tabs after a text change. 

But the below bug could require further work, so this could be possibly only part of the required change.

http://bugs.kde.org/show_bug.cgi?id=187890

Thanks, because I've ran into this bug a bajillion times.
Comment 1 Dawit Alemayehu 2011-06-09 11:24:51 UTC
The first report, clearing the tab and reloading should work fine in KDE 4.6 and up. Actually it might even be earlier ; so that part is already fixed. 

The issue you mentioned in the second paragraph of the report is however reproducable and a patch to address it is pending a review. See https://git.reviewboard.kde.org/r/101558/
Comment 2 Dawit Alemayehu 2011-06-19 20:23:53 UTC
Git commit e8abdb8bfe6f4973ceb47db487dfc61d0aefd8eb by Dawit Alemayehu.
Committed on 09/06/2011 at 08:03.
Pushed by adawit into branch 'KDE/4.6'.

Show the correct url when switching tabs after clearing Konqueror's location
bar using the clear button in the line edit or the backspace key.

BUG: 187891
FIXED-IN: 4.6.5
REVIEW: 101558

M  +5    -0    konqueror/src/konqmainwindow.cpp     

http://commits.kde.org/kde-baseapps/e8abdb8bfe6f4973ceb47db487dfc61d0aefd8eb
Comment 3 Dawit Alemayehu 2011-06-19 20:24:29 UTC
Git commit 61bd039bf6fcc67afe2d50f14b707b704283f002 by Dawit Alemayehu.
Committed on 09/06/2011 at 08:03.
Pushed by adawit into branch 'master'.

Show the correct url when switching tabs after clearing Konqueror's location
bar using the clear button in the line edit or the backspace key.

BUG: 187891
FIXED-IN: 4.6.5
REVIEW: 101558

(cherry picked from commit e8abdb8bfe6f4973ceb47db487dfc61d0aefd8eb)

M  +5    -0    konqueror/src/konqmainwindow.cpp     

http://commits.kde.org/kde-baseapps/61bd039bf6fcc67afe2d50f14b707b704283f002