Show the correct url when switching tabs after clearing Konqueror's location bar using the clear button in the line edit or the backspace key.

BUG: 187891
FIXED-IN: 4.6.5
REVIEW: 101558